name:           GpH
version:        0.1
author:         Mathieu Boespflug, Christophe Calvès
homepage:       http://code.haskell.org/~mboes/vcard.git
synopsis:       A basic solution. Pure Haskell implementation of 9p.
description:
        9p is a network file protocol originally for Plan9 from Bell Labs.
        9pH is a pure Haskell implementation of the protocol that can be
        used for 9p servers as well as 9p clients.
category:       Network
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2009. Mathieu Boespflug <mboes@tweag.net>
                (c) 2009. Christophe Calvès <christophe.calves@crans.org>
cabal-version:  >= 1.2.0
build-type:     Simple
tested-with:    GHC ==6.10

library
    extensions:      OverloadedStrings, PatternGuards, TemplateHaskell, EmptyDataDecls,
                     DeriveDataTypeable, ScopedTypeVariables, FlexibleInstances
    build-depends:   base >= 3, containers, bytestring >= 0.9, 
                     binary >= 0.4, array >= 0.2, bitset >= 0.6,
                     syb, template-haskell >= 2.3
    hs-source-dirs:  src
    exposed-modules: Network.GpH
                     Network.GpH.Types
                     Network.GpH.Protocol
    other-modules:   Network.GpH.Protocol.Derive

